# hya

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  DESIGN.md  README.md  clippy.toml  install.sh  opencode.json
crates/hya/: Cargo.toml
crates/hya-app/: Cargo.toml
crates/hya-app/src/: auth.rs  config.rs  formatter_config.rs  grok_oauth.rs  lib.rs  permission.rs  plugins.rs  runtime.rs  skills.rs
crates/hya-app/tests/: nested_spawn_tree.rs
crates/hya-backend/: Cargo.toml
crates/hya-backend/src/: agent_cmd.rs  auth_cmd.rs  cli_args.rs  main.rs  models_cmd.rs  serve.rs  tui.rs
crates/hya-backend/tests/: compat_agent_cli.rs  opencode_agent_cli.rs
crates/hya-cli/: Cargo.toml
crates/hya-cli/src/: agent_cmd.rs  auth_cmd.rs  cli_args.rs  main.rs  models_cmd.rs  rpc.rs  serve.rs  tui.rs
crates/hya-cli/tests/: opencode_agent_cli.rs
crates/hya-core/: Cargo.toml
crates/hya-core/src/: bus.rs  category.rs  compaction.rs  completion.rs  engine.rs  error.rs  hooks.rs  lib.rs  loop_mode.rs  mailbox.rs  orchestrator.rs  prompt.rs  resident.rs  subagent.rs  team.rs  title.rs  workspace.rs
crates/hya-core/tests/: category_routing.rs  command_hooks.rs  compact_context.rs  goal_loop.rs  hooks_seam.rs  loop_gate.rs  model_selection.rs  prompt_attachments.rs  resident.rs  session_cleanup.rs  shell_direct.rs  stream_round.rs  subagent.rs  team.rs  text_complete_hooks.rs  tool_error_payload.rs  tool_filtering.rs  turn_loop.rs  workdir.rs  worktree_lifecycle.rs
crates/hya-hya/: Cargo.toml
crates/hya-hya/src/: events.rs  lib.rs
crates/hya-mcp/: Cargo.toml
crates/hya-mcp/src/: bridge.rs  client.rs  manager.rs  resource.rs
crates/hya-native/: Cargo.toml
crates/hya-native/src/: events.rs  lib.rs  transport.rs
crates/hya-plugin/: Cargo.toml
crates/hya-plugin/src/: client.rs  codec.rs  dispatcher.rs  error.rs  host.rs  lib.rs  manifest.rs  messages.rs  permission_bridge.rs  plugin_tool.rs  protocol.rs
crates/hya-plugin/tests/: chain_load_order.rs  codec_lines.rs  command_dispatch.rs  crash_restart.rs  host_dispatch.rs  manifest_config.rs  plugin_tools.rs  posture_open_timeout.rs  posture_safe_timeout.rs  protocol_roundtrip.rs  text_complete_dispatch.rs  transport.rs  workspace_adapters.rs
crates/hya-provider/: Cargo.toml
crates/hya-provider/src/: anthropic.rs  dev.rs  fake.rs  google.rs  http.rs  lib.rs  openai.rs  router.rs  wire.rs
crates/hya-provider/tests/: conformance.rs  http_headers.rs  multiprovider.rs  structured_tool_error.rs
crates/hya-render-tui/: Cargo.toml
crates/hya-render-tui/src/: lib.rs
crates/hya-render-tui/tests/: tui_render.rs
crates/hya-sdk/: Cargo.toml
crates/hya-sdk/examples/: backend_spike.rs  native_spike.rs
crates/hya-sdk/src/: client.rs  error.rs  events.rs  lib.rs  native.rs  pending.rs  reducer.rs  server.rs  store.rs  team.rs  types.rs
crates/hya-server/: Cargo.toml
crates/hya-server/src/: compat.rs  lib.rs  opencode.rs  pending.rs  runs.rs  state.rs
crates/hya-server/tests/: api.rs  compat_abort_api.rs  compat_agent_config_api.rs  compat_agent_metadata_api.rs  compat_catalog_location_api.rs  compat_command_metadata_api.rs  compat_control_api.rs  compat_control_plane_api.rs  compat_doc_api.rs  compat_event_api.rs  compat_event_headers_api.rs  compat_event_heartbeat_api.rs  compat_experimental_api.rs  compat_experimental_resource_api.rs  compat_experimental_session_filter_api.rs  compat_experimental_tool_api.rs  compat_experimental_worktree_api.rs  compat_file_api.rs  compat_file_ignore_api.rs  compat_file_validation_api.rs  compat_find_symbol_api.rs  compat_fs_v2_api.rs  compat_health_api.rs  compat_instance_api.rs  compat_integration_api.rs  compat_interaction_root_api.rs  compat_location_api.rs  compat_lsp_status_api.rs  compat_mcp_api.rs  compat_mcp_dynamic_api.rs  compat_permission_question_api.rs  compat_permission_question_errors_api.rs  compat_permission_saved_api.rs  compat_project_copy_api.rs  compat_prompt_async_api.rs  compat_prompt_async_events_api.rs  compat_provider_model_api.rs  compat_provider_model_catalog_api.rs  compat_pty_api.rs  compat_pty_connect_api.rs  (+120 more)
crates/hya-store/: Cargo.toml
crates/hya-store/migrations/: 0001_init.sql
crates/hya-store/src/: error.rs  lib.rs
crates/hya-store/tests/: persistence.rs  store.rs
crates/hya-tool/: Cargo.toml
crates/hya-tool/src/: agents.rs  edit.rs  edit_replace.rs  file_diff.rs  formatter.rs  formatter_command.rs  interaction.rs  invalid.rs  lib.rs  lsp.rs  lsp.txt  mailbox.rs  output_cap.rs  permission.rs  plan.rs  question.rs  read.rs  shell.rs  skill.rs  skill_catalog.rs  spawn.rs  task.rs  todo.rs  tool.rs  websearch.rs  write.rs
crates/hya-tool/tests/: allow_model_no_ask.rs  apply_patch.rs  apply_patch_formatter.rs  apply_patch_lsp.rs  edit.rs  edit_fuzzy.rs  formatter.rs  formatter_bom.rs  glob_grep.rs  invalid.rs  lsp.rs  lsp_write_edit.rs  plan_exit.rs  question.rs  read.rs  read_limits.rs  read_missing.rs  shell.rs  skill.rs  skill_catalog.rs  task.rs  todowrite.rs  tool.rs  webfetch.rs  websearch.rs  write.rs
crates/hya-tui/: Cargo.toml
crates/hya-tui/examples/: loop_smoke.rs
crates/hya-tui/src/: app.rs  contracts.rs  lib.rs  tui.rs
crates/hya-tui/tests/: app_loop.rs  state_route.rs  w3c.rs  w4_tui.rs
crates/hya/src/: args.rs  backend.rs  events.rs  main.rs  transport.rs
crates/hya/tests/: frontend_cli.rs  native_round_trip.rs  no_rust_tui.rs  version_metadata.rs
crates/yaca-app/: Cargo.toml
crates/yaca-app/src/: auth.rs  config.rs  formatter_config.rs  lib.rs  permission.rs  runtime.rs
crates/yaca-cli/: Cargo.toml
crates/yaca-core/: Cargo.toml
crates/yaca-mcp/: Cargo.toml
crates/yaca-plugin/: Cargo.toml
crates/yaca-provider/: Cargo.toml
crates/yaca-server/: Cargo.toml
crates/yaca-store/: Cargo.toml
crates/yaca-tool/: Cargo.toml
crates/yaca-tui/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs  sync_compat.rs  sync_opencode.rs
xtask/tests/: sync_compat_help.rs  sync_opencode_apply.rs  sync_opencode_dry_run.rs  sync_opencode_help.rs  sync_opencode_prune.rs
(+1546 files in other folders)
