# yaca — Rust multi-agent coding agent. Workspace root.
# See .trellis/tasks/06-20-agent-spec/{design.md,implement.md} for the full spec.
[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# --- internal crates (path deps) ---
yaca-proto = { path = "crates/yaca-proto" }
yaca-provider = { path = "crates/yaca-provider" }
yaca-tool = { path = "crates/yaca-tool" }
yaca-store = { path = "crates/yaca-store" }
yaca-core = { path = "crates/yaca-core" }
yaca-server = { path = "crates/yaca-server" }
yaca-client = { path = "crates/yaca-client" }
yaca-tui = { path = "crates/yaca-tui" }
yaca-mcp = { path = "crates/yaca-mcp" }
# --- external (pinned intent; each crate opts in per phase via `{ workspace = true }`) ---
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1", features = ["server", "http1"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9" # maintained serde_yaml fork — YAML config parsing
regex = "1"
similar = "2"
schemars = { version = "0.8", features = ["derive"] }
jsonschema = "0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "uuid", "time", "macros", "migrate"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
camino = { version = "1", features = ["serde1"] }
bytes = "1"
secrecy = "0.8"

# Library crates deny panic-paths (parse-don't-validate; typed errors). Bins/tests
# may relax locally with #![allow(...)]. (Per design.md N3 / implement.md gate.)
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.dev]
# faster incremental builds during the long phased build-out
opt-level = 0
