# hya — Rust multi-agent coding agent. Workspace root.
# See .trellis/tasks/06-20-agent-spec/{design.md,implement.md} for the full spec.
[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.28.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# --- internal crates (path deps) ---
hya-proto = { path = "crates/hya-proto" }
hya-provider = { path = "crates/hya-provider" }
hya-tool = { path = "crates/hya-tool" }
hya-store = { path = "crates/hya-store" }
hya-core = { path = "crates/hya-core" }
hya-server = { path = "crates/hya-server" }
hya-client = { path = "crates/hya-client" }
hya-legacy-tui = { path = "crates/hya-legacy-tui" }
hya-mcp = { path = "crates/hya-mcp" }
hya-plugin = { path = "crates/hya-plugin" }
hya-app = { path = "crates/hya-app" }
hya-native = { path = "crates/hya-native" }
# --- external (pinned intent; each crate opts in per phase via `{ workspace = true }`) ---
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.24"
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1", features = ["server", "http1"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9" # maintained serde_yaml fork — YAML config parsing
regex = "1"
rand_core = { version = "0.9", features = ["os_rng"] }
similar = "2"
schemars = { version = "0.8", features = ["derive"] }
jsonschema = "0.18"
mime_guess = "2.0.5"
libc = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "uuid", "time", "macros", "migrate"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
camino = { version = "1", features = ["serde1"] }
bytes = "1"
secrecy = "0.8"
unicode-width = "0.1"
unicode-segmentation = "1.11"

# Library crates deny panic-paths (parse-don't-validate; typed errors). Bins/tests
# may relax locally with #![allow(...)]. (Per design.md N3 / implement.md gate.)
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.dev]
# faster incremental builds during the long phased build-out
opt-level = 0
