[package]
name = "hya-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "hya-backend"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
hya-core = { workspace = true }
hya-store = { workspace = true }
hya-server = { workspace = true }
hya-proto = { workspace = true }
hya-app = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
