[package]
name = "hya-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
hya-proto = { workspace = true }
hya-provider = { workspace = true }
hya-tool = { workspace = true }
hya-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
