[package]
name = "hya-render-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
hya-proto = { workspace = true }
ratatui = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
