[package]
name = "hya-sdk"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2"] }
eventsource-stream = "0.2"
futures-util = "0.3"
libc = "0.2"
