[package]
name = "hya-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
hya-core = { workspace = true }
hya-mcp = { workspace = true }
hya-proto = { workspace = true }
hya-provider = { workspace = true }
hya-store = { workspace = true }
hya-tool = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
mime_guess = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
http-body-util = "0.1"
hya-provider = { workspace = true }
hya-store = { workspace = true }
