[package]
name = "hya-tui"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
hya-sdk = { path = "../hya-sdk" }
hya-tui-lib = { workspace = true }
fuzzy-matcher = "0.3"
pulldown-cmark = "0.13"
ratatui = "0.29"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
unicode-segmentation = "1"
unicode-width = "0.2"

[dev-dependencies]
async-trait = { workspace = true }
