[package]
name = "hya"
version.workspace = true
edition = "2021"
license.workspace = true
default-run = "hya"

[[bin]]
name = "hya"
path = "src/main.rs"

[dependencies]
hya-sdk = { path = "../hya-sdk" }
hya-tui = { path = "../hya-tui" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
