[package]
name = "hya"
version.workspace = true
edition = "2021"
license.workspace = true
default-run = "hya"

[[bin]]
name = "hya"
path = "src/main.rs"

[dev-dependencies]
hya-app = { workspace = true }
hya-native = { path = "../hya-native" }
hya-sdk = { path = "../hya-sdk" }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
