[package]
name = "yaca-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
yaca-core = { workspace = true }
yaca-provider = { workspace = true }
yaca-tool = { workspace = true }
yaca-store = { workspace = true }
yaca-server = { workspace = true }
yaca-proto = { workspace = true }
yaca-mcp = { workspace = true }
yaca-plugin = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_norway = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
