[package]
name = "yaca-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "yaca"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
yaca-core = { workspace = true }
yaca-provider = { workspace = true }
yaca-tool = { workspace = true }
yaca-store = { workspace = true }
yaca-server = { workspace = true }
yaca-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
