[package]
name = "yaca-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "yaca"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
yaca-core = { workspace = true }
yaca-provider = { workspace = true }
yaca-tool = { workspace = true }
yaca-store = { workspace = true }
yaca-server = { workspace = true }
yaca-proto = { workspace = true }
yaca-tui = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
