[package]
name = "yaca-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
yaca-proto = { workspace = true }
yaca-provider = { workspace = true }
yaca-tool = { workspace = true }
yaca-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
