[package]
name = "yaca-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
yaca-proto = { workspace = true }
yaca-provider = { workspace = true }
yaca-core = { workspace = true }
yaca-tool = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_norway = { workspace = true }
