[package]
name = "yaca-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
yaca-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
