[package]
name = "yaca-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
yaca-core = { workspace = true }
yaca-mcp = { workspace = true }
yaca-proto = { workspace = true }
yaca-store = { workspace = true }
yaca-tool = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
http-body-util = "0.1"
yaca-provider = { workspace = true }
yaca-store = { workspace = true }
