[package]
name = "yaca-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
yaca-proto = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
